Fixed wrong width of slider images

--- a/style.css
+++ b/style.css
@@ -36,9 +36,14 @@ img {
   letter-spacing: 2px;
 }
 
-.photo {
+.slider-photo {
   height: 100%;
+}
+
+.photo {
+  /* display: flex; */
   width: 100%;
+  height: 100%;
 }
 
 .contact_element {
@@ -68,7 +73,6 @@ img {
     position: relative;
     z-index: 1;
   }
-
 
   .logo {
     font-size: 0.7em;
@@ -103,11 +107,15 @@ img {
   }
 
   @keyframes slidein {
-    100% {right: 0}
+    100% {
+      right: 0;
+    }
   }
 
   @-webkit-keyframes slidein {
-    100% {right: 0}
+    100% {
+      right: 0;
+    }
   }
 
   .slide_out {
@@ -119,11 +127,15 @@ img {
   }
 
   @keyframes slideout {
-    100% {right: -52vw}
+    100% {
+      right: -52vw;
+    }
   }
 
   @-webkit-keyframes slideout {
-    100% {right: -52vw}
+    100% {
+      right: -52vw;
+    }
   }
 
   .nav_top {
@@ -170,14 +182,18 @@ img {
     margin: 26px;
   }
 
-  .footer, .arrow_container {
+  .footer,
+  .arrow_container {
     visibility: hidden;
     position: fixed;
   }
 }
 
 @media screen and (orientation: landscape), (min-width: 1136px) {
-  .back_to_top, .hamburger, .exit_nav, .nav_bottom {
+  .back_to_top,
+  .hamburger,
+  .exit_nav,
+  .nav_bottom {
     visibility: hidden;
     position: fixed;
   }
